# master_study

./: README.md  barchetta.launch  barchetta.sh  barchetta.sh~  frames.gv  out.csv  pid.yaml  ras_carla.launch  rviz_config.rviz  rviz_experiment.rviz  start_scenario_1.sh  swipe_detecter_fixed.launch  yp_teleop.launch
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/data_logger/: swipe_obstacles_log.h
devel/include/ras_carla/: RasObject.h  RasObjectArray.h
devel/include/swipe_obstacles/: closest_obstacle.h  detected_obstacle.h  detected_obstacle_array.h
devel/include/teleop_study/: teleop_studyConfig.h
devel/include/ypspur_ros/: ControlMode.h  DigitalInput.h  DigitalOutput.h  JointPositionControl.h
devel/lib/add_intensity/: add_intensity_node
devel/lib/carla_helper/: add_intensity_node  fake_ndt_node
devel/lib/pkgconfig/: add_intensity.pc  carla_helper.pc  data_logger.pc  int_detection.pc  ras_carla.pc  swipe_obstacles.pc  teleop.pc  teleop_study.pc  ypspur_ros.pc
devel/lib/ras_carla/: ras_autoware_connector_node  ras_core_node  ras_visualizer_node
devel/lib/ypspur_ros/: ypspur_ros  (+2 more)
src/carla_helper/: CMakeLists.txt  Town03_waypoints.csv  Town05_waypoints.csv  actor.csv  carla_helper.launch  package.xml  scenario.csv  scenario.xml  scenario_test.xml  scenario_town5.xml  scenario_town5_demo.xml  scenario_town5_lite.xml
src/carla_helper/script/: camera.py  camera_hud.py  carla_bridge.py  check_scenario.py  check_scenario_xml.py  get_position.py  ros_to_carla_vehicle.py  scenario_xml.py  spawn_actor.py  spawn_actor_xml.py  test.py
src/carla_helper/src/: add_intensity.cpp  carla_helper.cpp  carla_waypoint_publisher.cpp  fake_ndt.cpp  test.cpp
src/data_logger/: CMakeLists.txt  package.xml
src/int_detection/: CMakeLists.txt
src/ras_carla/: CMakeLists.txt  package.xml  ras_carla.launch
src/swipe_obstacles/: CMakeLists.txt  package.xml  swipe_detecter_fixed.launch
src/teleop_carla/: CMakeLists.txt  barchetta.launch.bac  package.xml  teleop_carla.launch
src/teleop_study/: CMakeLists.txt  barchetta.launch  package.xml
(+128 files in other folders)
